--- a/src/18. Legong Mahabharata.jade
+++ b/src/18. Legong Mahabharata.jade
@@ -21,14 +21,17 @@ html
 
       section
         h2 Sejarah Tari Legong Bali
-        img(src="images/Legong-Mahabharata-Di-Ubud.jpg")
+        img(src="images/Legong-Mahabharata-Di-Ubud.jpg" height = 300 width = 600)
 
       section
-        p Tari Legong diciptakan dan berkembang pada akhir abad ke 19 dan lebih sering ditarikan di istana kerajaan Bali atau keraton. Di masyarakat Bali, tari Legong lebih familiar dengan nama Legong Keraton, mungkin karena dulunya sering di pentaskan di keraton kerajaan Bali.Menurut cerita dari orang tua di Bali, katanya tari Legong tercipta karena seorang pangeran di kerajaan Sukawati pada saat sakit. Sang pangeran bermimpi melihat dua gadis belia menarikan tarian ini dan diiringi oleh gambelan yang sangat merdu. Setelah pangeran dari kerajaan Sukawati ini sembuh, maka tarian yang terlihat dari mimpi beliau di ciptakan dalam dunia nyata.Awal mulanya, tari Legong hanya terdapat dua orang gadis yang masih belia dan belum mengalami masa menstruasi. Kedua penari Legong akan membawa kipas, dengan kipas ini, kedua penari Legong akan melakukan gerak yang hampir sama di setiap bagian tarian.
+        p Tari Legong diciptakan dan berkembang pada akhir abad ke 19 dan lebih sering ditarikan di istana kerajaan Bali atau keraton. Di masyarakat Bali, tari Legong lebih familiar dengan nama Legong Keraton, mungkin karena dulunya sering di pentaskan di keraton kerajaan Bali.Menurut cerita dari orang tua di Bali, katanya tari Legong tercipta karena seorang pangeran di kerajaan Sukawati pada saat sakit. 
+
+      Section
+        P Sang pangeran bermimpi melihat dua gadis belia menarikan tarian ini dan diiringi oleh gambelan yang sangat merdu. Setelah pangeran dari kerajaan Sukawati ini sembuh, maka tarian yang terlihat dari mimpi beliau di ciptakan dalam dunia nyata.Awal mulanya, tari Legong hanya terdapat dua orang gadis yang masih belia dan belum mengalami masa menstruasi. Kedua penari Legong akan membawa kipas, dengan kipas ini, kedua penari Legong akan melakukan gerak yang hampir sama di setiap bagian tarian.
 
       section
         h2 Tari Legong Mahabharata Di Puri Ubud
-        img(src="images/Legong-Mahabharata-Puri-Saren-Ubud.jpg") 
+        img(src="images/Legong-Mahabharata-Puri-Saren-Ubud.jpg" height = 300 width = 600) 
 
       section
         p Jika anda ingin menonton tari Legong Mahabharata, tempat yang harus anda kunjungi adalah puri Ubud atau sering disebut dengan nama puri Saren. Untuk melihat peta lokasi dari puri Saren silakan klik link ini, peta lokasi puri Saren Ubud. Jika anda menginap di Ubud, untuk mencari lokasi dari puri Saren sangatlah mudah, malas jalan kaki anda dapat memanggil taksi. Lalu bagi anda yang tidak menginap di tempat wisata Ubud, tentunya dengan menggunakan taksi biaya transfortasi akan menjadi mahal.
@@ -38,7 +41,7 @@ html
 
       section
         h2 Jadwal Tari Legong Mahabharata Di Puri Saren
-        img(src="images/Legong-Mahabharata-seni-tari-ubud.jpg") 
+        img(src="images/Legong-Mahabharata-seni-tari-ubud.jpg" height = 300 width = 600) 
 
       section  
         p Tidak setiap hari ada pementasan tari Legong Mahabharata di puri Saren Ubud, pementasan khusus untuk tari Legong Mahabharata, hanya ada pada hari minggu. Tari Legong Mahabharata di puri Saren Ubud dimulai pada jam 19:30 - 21:00, jadi lumayan lama.
@@ -84,7 +87,7 @@ html
 
       section  
         h3 Tips Menonton Tari Bali Di Puri Saren Ubud
-        ul 
+        ol 
           li Ingin mendapatkan tempat duduk di bagian depan, anda harus datang lebih awal, setidaknya 30 menit lebih awal.
           li Belilah tiket dari anak-anak yang banyak menjual tiket di depan puri Saren, karena anda dapat menawar harga tiket.
           li Bawalah lotion anti nyamuk.
@@ -92,3 +95,5 @@ html
           li Bawalah brosur tentang tarian ini, agar anda tahu jalan ceritanya saat menonton.
 
    include footer
+
+
