--- a/src/19. Yeh Pulu Relief.jade
+++ b/src/19. Yeh Pulu Relief.jade
@@ -1,38 +1,32 @@
 doctype html
 html
-  head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Yeh Pulu Relief
+  include header
 
-
-    link(rel='stylesheet', type='text/css', href='build/build.css')
-
-  body
-
+  body.classic
+    include menu
     article
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h2 Yeh Pulu 
-        img(src="images/relief-yeh-pulu.jpg")
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
+        h2 Yeh Pulu 
+        img(src="images/relief-yeh-pulu.jpg" height = 300 width = 600)
+
+      section
         p Salah satu tempat wisata budaya di Bali yang unik dan jarang wisatawan tahu adalah pura Yeh Pulu Ubud Bali. Sebagian besar wisatawan yang berkunjung ke pura Yeh Pulu Ubud adalah wisatawan asing. Wisatawan domestik sangat jarang mengunjungi objek wisata di Bali ini. Hal ini disebabkan karena kurangnya promosi akan tempat wisata sejarah ini, untuk wisatawan domestik. Di halaman situs ini, saya akan menuliskan kepada pembaca tentang pura Yeh Pulu Bali, betapa uniknya dan bersejarahnya lokasi wisata Yeh Pulu Ubud, sehingga layak untuk dijadikan salah satu objek wisata di Bali yang harus dikunjungi.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h3 Lokasi Pura Yeh Pulu Ubud Bali
+        img(src="images/pura-yeh-pulu.jpg" height = 300 width = 600)
+
+      section
         p Lokasi dari objek wisata Yeh Pulu Bali, berada di desa Bedulu, Kecamatan Blahbatuh, Kabupaten Gianyar. Karena terletak di desa Bedahulu, pura Yeh Pulu juga sering disebut dengan nama Yeh Pulu Bedulu. Untuk berwisata ke objek wisata Yeh Pulu, anda tidak harus secara khusus meluangkan waktu untuk ke objek wisata di Ubud ini. Karena tempat wisata Yeh Pulu, searah dengan rute Kuta - Denpasar - Ubud - Kintamani.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        img(src="images/pura-yeh-pulu.jpg")
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Rute wisata Kuta - Denpasar - Ubud - Kintamani, salah satu rute favorit wisatawan dalam memilih paket tour Bali. Salah satu yang paling favorit adalah paket tour Ubud Kintamani. Jika anda memang menyukai wisata ke tempat bersejarah, maka pura Goa Gajah jangan anda lewatkan, karena lokasinya berdekatan dengan Yeh Pulu Relief.Yang unik dari lokasi Pura ini, karena terletak di lokasi persawahan. Lokasi persawahaan sangat luas dan tersebar di segala penjuru desa Bedulu. Jadi saat wisata, anda tidak hanya melihat relief sejarah pura, selain itu anda juga akan melihat pemandangan persawahaan yang  tertata rapi.
+        p Rute wisata Kuta - Denpasar - Ubud - Kintamani, salah satu rute favorit wisatawan dalam memilih paket tour Bali. Salah satu yang paling favorit adalah paket tour Ubud Kintamani. Jika anda memang menyukai wisata ke tempat bersejarah, maka pura Goa Gajah jangan anda lewatkan, karena lokasinya berdekatan dengan Yeh Pulu Relief. 
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Untuk mencapai lokasi tempat wisata Pura Yeh Pulu, cara terbaik adalah menggunakan jasa sewa mobil di Bali dengan sopir. Karena mencari lokasi dari tempat wisata ini, lumayan susah dan sangat jarang tersedia taksi untuk mengantar anda kembali. Selain itu menggunakan jasa sewa mobil + driver di Bali, selain harga total lebih murah, anda juga tidak perlu memikirkan akan tempat parkir dan kemacetan di jalan raya.
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        img(src="images/yeh-pulu-relief.jpg")
+        img(src="images/yeh-pulu-relief.jpg" height = 300 width 600)
+        p Yang unik dari lokasi Pura ini, karena terletak di lokasi persawahan. Lokasi persawahaan sangat luas dan tersebar di segala penjuru desa Bedulu. Jadi saat wisata, anda tidak hanya melihat relief sejarah pura, selain itu anda juga akan melihat pemandangan persawahaan yang  tertata rapi.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
         p Untuk mencapai lokasi dari pura ini, anda harus melewati jalanan setapak lumayan kecil. Jalan setapak ini sangat terawat, baik dari sisi kebersihan dan keindahan. Perawatan akan jalan setapak ini, dilakukan oleh masyarakat sekitar yang memiliki organisasi pertanian, dengan nama Subak. Di lokasi objek wisata ini, tersedia sarana tempat parkir, toilet, toko penjual oleh-oleh khas Bali dan jasa pemandu wisata, jika anda ingin tahu lebih tentang sejarah Pura Yeh Pulu Bedulu.
@@ -59,8 +53,6 @@ html
 
         p Sungai Ayung Ubud, setiap hari ramai dengan kunjungan wisatawan yang ingin melakukan aktivitas rafting. Salah satu perusahaan yang terkenal dan peritis rafting di Ubud bernama Sobek rafting. Wisatawan domestik saat ini telah menjadikan wisata rafting sebagai salah satu aktivitas wisata di Bali.
 
-   script(src='build/build.js')
-
-
+   include footer
 
 
