--- a/src/index.jade
+++ b/src/index.jade
@@ -5,49 +5,54 @@ html
   body.classic
     include menu
     article
+      Section
+        h1 Pura Taman Saraswati
+        img(src="images/Pura-Taman-Saraswati-Ubud.jpg" height = 300 width = 600)
 
       section
-        h1 Museum Neka Ubud Bali
-        img.big(src="images/museumneka2.jpg" height = 250 width = 600)
-
-      section        
-        p Aktivitas wisata Ubud Bali, sangat terkenal sampai ke mancanegara dan banyak hal menarik yang wisatawan, dapat lakukan di tempat wisata Ubud. Salah satu tempat menarik di Ubud Bali, yang banyak mendapat kunjungan dari wisatawan adalah Museum Neka Ubud Bali. Jika anda pernah mendengar pelukis terkenal Indonesia, yang bernama Affandi dan Bagong Kussudiardjo. Maka Museum Neka Ubud, salah satu tempat tempat wisata di Ubud Bali yang harus di kunjungi.
+        h2 Penjelasan Pura Taman Saraswati
+        p Pura Taman Saraswati Ubud - Wisata ke Ubud Bali, apa ada yang tidak suka? Jika ada, sebagian besar penyebabnya karena harga-harga di kawasan objek wisata Ubud, lebih mahal dibandingkan dengan objek wisata terkenal di Bali yang lain.Hampir sebagian besar wisatawan mancanegara dan domestik, selalu merencanakan untuk mengunjungi tempat wisata di Ubud. Disini tersedia banyak hotel dari kelas bintang lima sampai dengan hotel melati.
 
       section
-        h3 Neka Art Museum Di Ubud
-        p Museum Neka Ubud Bali, lokasinya berada di Jalan Raya Campuhan, Kedewatan, Ubud
-        p  Museum Neka Ubud Bali, dibuka pada tahun 1982. Nama Museum berasal dari nama seorang guru, yang memiliki kegemaran dalam mengkoleksi lukisan, nama guru tersebut adalah Suteja Neka.
+        p Selain itu, Ubud juga sangat terkenal akan wisata arung jeram yang lebih dikenal dengan nama Ayung rafting Ubud.Desa Ubud, sangat terkenal akan wisata seni dan budaya dan setiap hari di tempat wisata Ubud, diselenggarakan pentas kesenian Bali. Salah satunya adalah pementasan tari kecak Bali.Ubud merupakan salah satu tempat terbaik untuk menonton tari kecak di Bali, selain menonton tari kecak di Uluwatu. Salah satu tempat pementasan tarian kecak di Ubud adalah di Pura Taman Saraswati Ubud.
 
       section
-        p Bangunan museum Neka Ubud Bali, memiliki arsitektur khas Bali dengan standar museum International. Selain bangunan museum Neka sangat terawat, cara menampilkan hasil seni lukis di museum Neka sangat terorganisir. Ini memudahkan pengunjung, untuk mengerti dan menikmati seni lukis. Setiap tahun, lukisan di museum Neka bertambah banyak dan saat ini ada lebih dari 300 lukisan, dari seniman mancanegara ataupun pelukis Indonesia. 
+        h2 Menonton Tari Kecak Di Pura Taman Saraswati Ubud
+        p Sebelum kami menuliskan tentang tari kecak di Pura Taman Saraswati Ubud. Ada baiknya kami menuliskan sedikit tentang pura Pura Taman Saraswati Ubud. Seperti yang anda tahu, pura adalah tempat suci agama hindu di Bali dan pura Taman Saraswati Ubud adalah salah satunya. Pura ini, sesuai dengan namanya adalah tempat pemujaan Dewi Saraswati (Dewi Pengetahuan). Lokasi dari pura ini, terdapat di jalan raya Ubud.
 
       section
-        img.big(src="images/Museumneka.jpg" height = 250 width = 600)
+        p Pura Taman Saraswati Ubud, sedikit berbeda dari pura-pura lain yang ada di Bali. Pura ini memiliki kolam yang banyak terdapat bunga teratai dan kolam teratai inilah, daya tarik utama dari pura Saraswati. Jika anda menyukai melihat seni ukir khas Ubud Bali, disinilah tempatnya untuk melihat. Hampir setiap bangunan pura, terdapat seni ukir dari para seniman Ubud.
+
 
       section
-        h3 Jam Buka Museum Dan Biaya Tiket Masuk
-        p.bullet Tiket masuk akan dikenakan sebesar Rp 50.000, untuk orang dewasa dan anak-anak di bawah 12 tahun gratis. Untuk jam buka dapat dilihat di bawah ini.
-        ulcircle
-         li Senin-Sabtu 09:00 - 17.00
-         li Minggu 13:00 - 17.00
-         li Hari Libur National tutup
+        h2 Pura Kolam Bunga Teratai
+        p Pura ini memiliki panggung pemantasan tari kecak dan panggung di kelilingi oleh kolam teratai. Saat anda liburan di Bali dan berencana untuk menonton tarian kecak Ubud di Pura Taman Saraswati, sebaiknya anda memperhatikan terlebih dahulu, jadwal pementasan tarian kecak di Pura Taman Saraswat Ubud. Tidak setiap hari, diadakan pementasan tarian kecak di pura ini.
+
+      Section
+        h2 Jadwal Pementasan Tari Kecak Di Pura Taman Saraswati Ubud
+        p Hari selasa dan hari kamis, mulai pertunjukan jam 19:30, dengan harga tiket Rp 75.000 per orang. Pertunjukan tarian kecak di bawakan oleh group tari Sandhi Suara.
 
       section
-        h2 Tempat Lukisan Pelukis Affandi
-        p.bullet Museum Neka salah satu tempat di Bali untuk dapat melihat lukisan karya Affandi. Terdapat dua lukisan karya Affandi di museum Neka Ubud, yaitu:
-        ol
-          li Lukisan Tari Barong & Rangda, tahun 1973. Dengan ukuran lukisan 100 x 185 cm.
-          li Lukisan Perahu Nelayan, tahun 1975. Dengan ukuran lukisan 103 x 129 cm.
+         p Bagi anda yang ingin menonton tarian kecak di Ubud tidak akan susah, walupun anda tidak datang pada hari selasa atau kamis. Setiap hari diadakan pementasan tarian kecak di Ubud, hanya tempat pementasannya yang berbeda-beda.
+         <p style="color:red"> Lihat di sini <a href="4. Tari Kecak Ubud.html#4"> Jadwal Tari Kecak Ubud.</a></p>
+         p Ada beberapa cara yang dapat anda lakukan untuk dapat berwisata ke objek wisata Ubud :
 
-        p Selain Affandi, museum Neka Ubud juga memamerkan lukisan dari pelukis Bagong Kussudiardjo, dengan judul lukisan Penari, dibuat pada tahun 1990, dengan ukuran lukisan 143 x 295 cm.
+      Section
+        h3 1. Mencari Jasa Sewa Mobil Dengan Supir Di Bali
+        p Dengan cara menyewa mobil + driver di Bali, akan sangat memudahkan anda untuk berpergian dari satu tempat wisata di Bali ke tempat wisata yang lain, tanpa memikirkan mencari tempat parkir, mencari jalan pintas, serta memikirakan tetang kemacetan jalanan.
+        p Objek wisata di Ubud, sangat jarang tersedia tempat parkir mobil, hampir sebagian besar, orang parkir di penggir jalan dan sangat sering penuh. Karena hal ini, kami sangat menyarankan anda untuk mencari penyedia jasa rent car di Bali dengan supir.
 
-      section
-        h2 Cara Terbaik Mengunjungi Museum Neka Ubud Bali
-        p Saat anda wisata di Ubud Bali, tentunya anda akan memerlukan sarana transfortasi untuk mengunjungi tempat wisata di Bali yang anda inginkan. Jika anda menginap di Ubud dan hanya ingin wisata ke satu tempat wisata di Ubud. Menggunakan taksi adalah cara terbaik. Banyak taksi yang tersedia di Ubud, jadi anda tidak akan kesusahan untuk mencari.
-
-      section
-        p Jika wisatawan tidak menginap di Ubud, cara terbaik untuk mengunjungi Museum Neka dan tempat wisata lain di Ubud adalah dengan menggunakan jasa sewa mobil dan driver di Bali. Di Ubud, untuk mencari tempat parkir, tidaklah mudah. Terkadang harus parkir di pinggir jalan dan sangat susah untuk mendapatkan tempat parkir. Karena itu, disarankan untuk  menggunakan jasa rental mobil dan supir di Ubud Bali. Selain Museum Neka, Ubud juga memiliki museum lain yang layak untuk anda kunjungi. Nama museumnya adalah Arma museum Ubud.
-
+      Section
+        h3 2. Membeli Paket Wisata Murah Di Bali
+        p Karena Ubud sangat terkenal dan mendapat permintaan yang sangat tinggi dari wisatawan, maka sangat banyak penyedia usaha perjalanan wisata yang menyediakan Ubud tour.
+        p Kelebihan dari membeli paket tour murah di Bali, selain anda mendapat kelebihan layanan jasa sewa mobil dengan supir, jadwal tour anda akan terencana dan terarah. Selain itu, budget liburan anda akan terencana. 
 
    include footer
+
+
+
+
+
+
+
 
