--- a/src/2. Puri Ubud.jade
+++ b/src/2. Puri Ubud.jade
@@ -12,15 +12,16 @@ html
 
       section
         h2 Sejarah Puri Ubud 
-
-      Section
         p Pada saat kerajaan Majapahit runtuh di abad ke 15, maka terjadi eksodus besar-besaran dari bangsawan Jawa untuk migrasi ke pulau Bali. Bangsawan dari pulau Jawa inilah yang mendirikan kerajaan Gelgel yang berada di kabupaten Klungkung, kabupaten di bagian tenggara pulau Bali. Kerajaan Gelgel inilah yang memberikan perlindungan kepada para bangsawan dari Jawa yang migrasi ke pulau Bali. Bangsawan dari Jawa yang membawa sistem kasta di Bali.
 
       Section
         p Pada abad ke 17 banyak berdiri kerajaan baru di wilayah pulau Bali, salah satunya di Ubud. Pada abad ke 17, banyak di bangun rumah para bangsawan di Ubud yang di beri nama Puri. Pada periode ini, banyak terjadi peperangan antar kerajaan di Bali, yang memperebutkan kekuasaan akan perluasan daerah.
 
       Section
-        P Seorang pangeran dari kerajaan Gelgel Klungkung, dikirim ke daerah desa Sukawati untuk membangun sebuah istana kerajaan yang memiliki keindahan arsitektur agar ditujukan untuk kekuasaan di wilayah Gianyar. Pada saat pembangunan istana kerajaan di Sukawati, banyak seniman Bali dari berbagai daerah di kirim ke daerah Sukawati untuk membantu pembangunan istana. Setelah pembagunan istana di Sukawati selesai, banyak dari seniman memilih untuk tinggal di Sukawati. Oleh karena itu sampai saat ini, daerah Sukawati menjadi salah satu pusat seni baik seni tari, seni lukis, seni patung ataupun seni musik dan yang terkenal adalah pasar seni Sukawati. Setelah berhasilnya di bangun istana di Sukawati, para prajurit istana Sukawati pada akhir abad 17 di kirim ke Ubud, untuk mengamankan Ubud yang sering terjadi konflik.
+        P Seorang pangeran dari kerajaan Gelgel Klungkung, dikirim ke daerah desa Sukawati untuk membangun sebuah istana kerajaan yang memiliki keindahan arsitektur agar ditujukan untuk kekuasaan di wilayah Gianyar. Pada saat pembangunan istana kerajaan di Sukawati, banyak seniman Bali dari berbagai daerah di kirim ke daerah Sukawati untuk membantu pembangunan istana. 
+
+      Section
+        P Setelah pembagunan istana di Sukawati selesai, banyak dari seniman memilih untuk tinggal di Sukawati. Oleh karena itu sampai saat ini, daerah Sukawati menjadi salah satu pusat seni baik seni tari, seni lukis, seni patung ataupun seni musik dan yang terkenal adalah pasar seni Sukawati. Setelah berhasilnya di bangun istana di Sukawati, para prajurit istana Sukawati pada akhir abad 17 di kirim ke Ubud, untuk mengamankan Ubud yang sering terjadi konflik.
 
       section
         p Konflik yang terjadi di Ubud pada akhir abad ke 17, antara dua orang sepupu, yang satu berada di wilayah Padang Tegal Ubud dan yang lagi satu berada di wilayah Taman Ubud, yang berada di sebelah utara wilayah Padang Tegal Ubud. Peperangan antar ke dua sepupu ini, membuat raja Sukawati mengutus ke dua saudarnya untuk mengamankan wilayah Ubud.
@@ -36,12 +37,10 @@ html
 
       Section
         h2 Sejarah Pariwisata Ubud
+        p Pada awal tahun 1930an, banyak wisatawan asing yang datang ke Bali, terutama mengunjungi wilayah Ubud. Kenapa hanya di Ubud? Hal ini dikarenakan kemampuan dari Tjokorde Gede Agung Sukawati yang memerintah Ubud (saudara Raja Sukawati - Tjokorde Gede Raka Sukawati) dalam bahasa Inggris dan bahasa Belanda. Selain itu karena kemampuan dan pengetahuan raja Ubud akan bisnis, maka di bangunlah guest house untuk tempat wisatawan menginap di Ubud. 
 
       Section
-        p Pada awal tahun 1930an, banyak wisatawan asing yang datang ke Bali, terutama mengunjungi wilayah Ubud. Kenapa hanya di Ubud? Hal ini dikarenakan kemampuan dari Tjokorde Gede Agung Sukawati yang memerintah Ubud (saudara Raja Sukawati - Tjokorde Gede Raka Sukawati) dalam bahasa Inggris dan bahasa Belanda. Selain itu karena kemampuan dan pengetahuan raja Ubud akan bisnis, maka di bangunlah guest house untuk tempat wisatawan menginap di Ubud. Perkembangan pariwisata Ubud juga tidak lepas dari peran Raja Sukawati, kakak dari Raja Ubud yang mengundang seniman lukis Walter Spiers ke Ubud untuk tinggal dan melukis di Ubud.
-
-      Section
-        p Tinggalnya Walter Spiers di Ubud menjadikan trend di kalangan seniman lukis asing untuk berkarya di Ubud. Melalui lukisan inilah, Ubud mulai terkenal ke mancanegara, karena lukisan dari pelukis asing, mengambarkan tentang kehidupan di Ubud, serta pelukis asing melakukan pameran lukisan di luar negeri. 
+        p Perkembangan pariwisata Ubud juga tidak lepas dari peran Raja Sukawati, kakak dari Raja Ubud yang mengundang seniman lukis Walter Spiers ke Ubud untuk tinggal dan melukis di Ubud. Tinggalnya Walter Spiers di Ubud menjadikan trend di kalangan seniman lukis asing untuk berkarya di Ubud. Melalui lukisan inilah, Ubud mulai terkenal ke mancanegara, karena lukisan dari pelukis asing, mengambarkan tentang kehidupan di Ubud, serta pelukis asing melakukan pameran lukisan di luar negeri. 
 
       Section
         p Sebuah asosiasi seni lukis didirikan oleh Tjokorde Gede Agung (raja Ubud), Walter Spies dan Rudolf Bonnet, serta beberapa seniman lokal yang diberi nama Pita Maha. Tujuan dari asosiasi seni lukis ini adalah mengumpulkan para seniman Bali, untuk mengajarkan kesenian kepada para muda-mudi di daerah Ubud. Oleh sebab itu, sampai saat ini, objek wisata Ubud menjadi pusat museum di Bali. Museum yang ada di Ubud seperti Arma Museum Ubud dan Museum Puri Lukisan Ubud.
@@ -49,6 +48,8 @@ html
 
 
    include footer
+
+
 
 
 
